# map_with_stats

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml  publish_prod.yml  publish_template.yml  publish_test.yml  test.yaml  test.yml
api/: index.html
docs/: api.md  faq.md  quick_start.md
environment/: linux.env  requirements_dev.txt  requirements_lib.txt  windows.env
faq/: index.html
overrides/partials/integrations/analytics/: custom.html
quick_start/: index.html
search/: search_index.json
src/map_with_stats/: __init__.py  data.py  map.py  utils.py
test/: test_data.py  test_utils.py
tests/: test_data.py  test_utils.py
